--- a/web-src/examples/heat.html
+++ b/web-src/examples/heat.html
@@ -24,25 +24,24 @@
 <script type="text/javascript" src="../js/dc.js"></script>
 <script type="text/javascript">
 
-var chart = new dc.HeatMap("#test");
-d3.csv("morley.csv").then(function(experiments) {
+const chart = new dc.HeatMap("#test");
+d3.csv("morley.csv").then((experiments) => {
 
-  var ndx    = crossfilter(experiments),
-      runDim = ndx.dimension(function(d) { return [+d.Run, +d.Expt]; }),
-      runGroup = runDim.group().reduceSum(function(d) { return +d.Speed; });
+  const ndx    = crossfilter(experiments),
+      runDim = ndx.dimension((d) => [+d.Run, +d.Expt]),
+      runGroup = runDim.group().reduceSum((d) => +d.Speed);
 
   chart
     .width(45 * 20 + 80)
     .height(45 * 5 + 40)
     .dimension(runDim)
     .group(runGroup)
-    .keyAccessor(function(d) { return +d.key[0]; })
-    .valueAccessor(function(d) { return +d.key[1]; })
-    .colorAccessor(function(d) { return +d.value; })
-    .title(function(d) {
-        return "Run:   " + d.key[0] + "\n" +
-               "Expt:  " + d.key[1] + "\n" +
-               "Speed: " + (299000 + d.value) + " km/s";})
+    .keyAccessor((d) => +d.key[0])
+    .valueAccessor((d) => +d.key[1])
+    .colorAccessor((d) => +d.value)
+    .title((d) => `Run:   ${  d.key[0]  }\n` +
+               `Expt:  ${  d.key[1]  }\n` +
+               `Speed: ${  299000 + d.value  } km/s`)
     .colors(["#ffffd9","#edf8b1","#c7e9b4","#7fcdbb","#41b6c4","#1d91c0","#225ea8","#253494","#081d58"])
     .calculateColorDomain();
 
