--- a/web-src/examples/pie-external-labels.html
+++ b/web-src/examples/pie-external-labels.html
@@ -17,39 +17,39 @@
 <script type="text/javascript" src="../js/dc.js"></script>
 <script type="text/javascript">
 
-  var chart = new dc.PieChart("#test");
-  d3.csv("morley.csv").then(function(experiments) {
+  const chart = new dc.PieChart("#test");
+  d3.csv("morley.csv").then((experiments) => {
 
-      var ndx           = crossfilter(experiments),
-          runDimension  = ndx.dimension(function(d) {return "run-"+d.Run;})
-      speedSumGroup = runDimension.group().reduceSum(function(d) {return d.Speed * d.Run;});
+    const ndx           = crossfilter(experiments),
+        runDimension  = ndx.dimension((d) => `run-${d.Run}`)
+    speedSumGroup = runDimension.group().reduceSum((d) => d.Speed * d.Run);
 
-      chart
-          .width(768)
-          .height(480)
-          .slicesCap(4)
-          .innerRadius(100)
-          .externalLabels(50)
-          .externalRadiusPadding(50)
-          .drawPaths(true)
-          .dimension(runDimension)
-          .group(speedSumGroup)
-          .legend(dc.legend());
+    chart
+        .width(768)
+        .height(480)
+        .slicesCap(4)
+        .innerRadius(100)
+        .externalLabels(50)
+        .externalRadiusPadding(50)
+        .drawPaths(true)
+        .dimension(runDimension)
+        .group(speedSumGroup)
+        .legend(dc.legend());
 
-      // example of formatting the legend via svg
-      // http://stackoverflow.com/questions/38430632/how-can-we-add-legends-value-beside-of-legend-with-proper-alignment
-      chart.on('pretransition', function(chart) {
-          chart.selectAll('.dc-legend-item text')
-              .text('')
-            .append('tspan')
-              .text(function(d) { return d.name; })
-            .append('tspan')
-              .attr('x', 100)
-              .attr('text-anchor', 'end')
-              .text(function(d) { return d.data; });
-      });
-      chart.render();
+    // example of formatting the legend via svg
+    // http://stackoverflow.com/questions/38430632/how-can-we-add-legends-value-beside-of-legend-with-proper-alignment
+    chart.on('pretransition', (chart) => {
+      chart.selectAll('.dc-legend-item text')
+          .text('')
+        .append('tspan')
+          .text((d) => d.name)
+        .append('tspan')
+          .attr('x', 100)
+          .attr('text-anchor', 'end')
+          .text((d) => d.data);
   });
+    chart.render();
+});
 
 </script>
 
