--- a/web-src/examples/pie.html
+++ b/web-src/examples/pie.html
@@ -17,12 +17,12 @@
 <script type="text/javascript" src="../js/dc.js"></script>
 <script type="text/javascript">
 
-var chart = new dc.PieChart("#test");
-d3.csv("morley.csv").then(function(experiments) {
+const chart = new dc.PieChart("#test");
+d3.csv("morley.csv").then((experiments) => {
 
-  var ndx           = crossfilter(experiments),
-      runDimension  = ndx.dimension(function(d) {return "run-"+d.Run;})
-      speedSumGroup = runDimension.group().reduceSum(function(d) {return d.Speed * d.Run;});
+  const ndx           = crossfilter(experiments),
+      runDimension  = ndx.dimension((d) => `run-${d.Run}`)
+      speedSumGroup = runDimension.group().reduceSum((d) => d.Speed * d.Run);
 
   chart
     .width(768)
@@ -33,10 +33,8 @@ d3.csv("morley.csv").then(function(experiments) {
     .group(speedSumGroup)
     .legend(dc.legend().highlightSelected(true))
     // workaround for #703: not enough data is accessible through .label() to display percentages
-    .on('pretransition', function(chart) {
-        chart.selectAll('text.pie-slice').text(function(d) {
-            return d.data.key + ' ' + dc.utils.printSingleValue((d.endAngle - d.startAngle) / (2*Math.PI) * 100) + '%';
-        })
+    .on('pretransition', (chart) => {
+        chart.selectAll('text.pie-slice').text((d) => `${d.data.key  } ${  dc.utils.printSingleValue((d.endAngle - d.startAngle) / (2*Math.PI) * 100)  }%`)
     });
 
   chart.render();
