--- a/web-src/examples/splom.html
+++ b/web-src/examples/splom.html
@@ -79,8 +79,8 @@
     </div>
 
     <script type="text/javascript">
-      var fields = ['petal_width', 'petal_length', 'sepal_width', 'sepal_length'];
-      var rows = ['heading'].concat(fields.slice(0).reverse()),
+      const fields = ['petal_width', 'petal_length', 'sepal_width', 'sepal_length'];
+      const rows = ['heading'].concat(fields.slice(0).reverse()),
           cols = ['heading'].concat(fields);
 
       if(location.search.indexOf('nowait')!==-1) {
@@ -89,111 +89,105 @@
           d3.select('#wait-prep').text('with');
           d3.select('#wait-url').attr('href', location.origin + location.pathname);
       } else {
-          d3.select('#wait-url').attr('href', location.origin + location.pathname + '?nowait');
+          d3.select('#wait-url').attr('href', `${location.origin + location.pathname  }?nowait`);
       }
 
-      d3.csv('iris.csv').then(function(iris) {
-          iris.forEach(function(d) {
-              Object.keys(fields).forEach(function(ab) {
-                  d[fields[ab]] = +d[fields[ab]];
-              });
-          });
-          var data = crossfilter(iris);
+      d3.csv('iris.csv').then((iris) => {
+    iris.forEach((d) => {
+  Object.keys(fields).forEach((ab) => {
+d[fields[ab]] = +d[fields[ab]];
+  });
+    });
+    const data = crossfilter(iris);
 
-          function make_dimension(var1, var2) {
-              return data.dimension(function(d) {
-                  return [d[var1], d[var2], d.species];
-              });
-          }
-          function key_part(i) {
-              return function(kv) {
-                  return kv.key[i];
-              };
-          }
+    function make_dimension(var1, var2) {
+        return data.dimension((d) => [d[var1], d[var2], d.species]);
+    }
+    function key_part(i) {
+        return function(kv) {
+            return kv.key[i];
+        };
+    }
 
-          var charts = [];
+    const charts = [];
 
-          d3.select('#content')
-              .selectAll('tr').data(rows)
-              .enter().append('tr').attr('class', function(d) {
-                  return d === 'heading' ? 'heading row' : 'row';
-              })
-              .each(function(row, y) {
-                  d3.select(this).selectAll('td').data(cols)
-                      .enter().append('td').attr('class', function(d) {
-                          return d === 'heading' ? 'heading entry' : 'entry';
-                      })
-                      .each(function(col, x) {
-                          var cdiv = d3.select(this).append('div')
-                          if(row === 'heading') {
-                              if(col !== 'heading')
-                                  cdiv.text(col.replace('_', ' '))
-                              return;
-                          }
-                          else if(col === 'heading') {
-                              cdiv.text(row.replace('_', ' '))
-                              return;
-                          }
-                          cdiv.attr('class', 'chart-holder');
-                          var chart = new dc.ScatterPlot(cdiv);
-                          var dim = make_dimension(col,row),
-                              group = dim.group();
-                          var showYAxis = x === 1, showXAxis = y === 4;
-                          chart
-                              .transitionDuration(0)
-                              .width(200 + (showYAxis?25:0))
-                              .height(200 + (showXAxis?20:0))
-                              .margins({
-                                  left: showYAxis ? 25 : 8,
-                                  top: 5,
-                                  right: 0,
-                                  bottom: showXAxis ? 20 : 5
-                              })
-                              .dimension(dim).group(group)
-                              .keyAccessor(key_part(0))
-                              .valueAccessor(key_part(1))
-                              .colorAccessor(key_part(2))
-                              .colorDomain(['setosa', 'versicolor', 'virginica'])
-                              .x(d3.scaleLinear()).xAxisPadding("0.001%")
-                              .y(d3.scaleLinear()).yAxisPadding("0.001%")
-                              .brushOn(true)
-                              .elasticX(true)
-                              .elasticY(true)
-                              .symbolSize(7)
-                              .nonemptyOpacity(0.7)
-                              .emptySize(7)
-                              .emptyColor('#ccc')
-                              .emptyOpacity(0.7)
-                              .excludedSize(7)
-                              .excludedColor('#ccc')
-                              .excludedOpacity(0.7)
-                              .renderHorizontalGridLines(true)
-                              .renderVerticalGridLines(true);
-                          chart.xAxis().ticks(6);
-                          chart.yAxis().ticks(6);
-                          chart.on('postRender', function(chart) {
-                              // remove axes unless at left or bottom
-                              if(!showXAxis)
-                                  chart.select('.x.axis').attr('display', 'none');
-                              if(!showYAxis)
-                                  chart.select('.y.axis').attr('display', 'none');
-                              // remove clip path, allow dots to display outside
-                              chart.select('.chart-body').attr('clip-path', null);
-                          });
-                          // only filter on one chart at a time
-                          chart.on('filtered', function(_, filter) {
-                              if(!filter)
-                                  return;
-                              charts.forEach(function(c) {
-                                  if(c !== chart)
-                                      c.filter(null);
-                              });
-                          });
-                          charts.push(chart);
-                      });
+    d3.select('#content')
+        .selectAll('tr').data(rows)
+        .enter().append('tr').attr('class', (d) => d === 'heading' ? 'heading row' : 'row')
+        .each(function(row, y) {
+            d3.select(this).selectAll('td').data(cols)
+                .enter().append('td').attr('class', (d) => d === 'heading' ? 'heading entry' : 'entry')
+                .each(function(col, x) {
+                    const cdiv = d3.select(this).append('div')
+                    if(row === 'heading') {
+                        if(col !== 'heading')
+                            {cdiv.text(col.replace('_', ' '))}
+                        return;
+                    }
+                    else if(col === 'heading') {
+                        cdiv.text(row.replace('_', ' '))
+                        return;
+                    }
+                    cdiv.attr('class', 'chart-holder');
+                    const chart = new dc.ScatterPlot(cdiv);
+                    const dim = make_dimension(col,row),
+                        group = dim.group();
+                    const showYAxis = x === 1, showXAxis = y === 4;
+                    chart
+                        .transitionDuration(0)
+                        .width(200 + (showYAxis?25:0))
+                        .height(200 + (showXAxis?20:0))
+                        .margins({
+                            left: showYAxis ? 25 : 8,
+                            top: 5,
+                            right: 0,
+                            bottom: showXAxis ? 20 : 5
+                        })
+                        .dimension(dim).group(group)
+                        .keyAccessor(key_part(0))
+                        .valueAccessor(key_part(1))
+                        .colorAccessor(key_part(2))
+                        .colorDomain(['setosa', 'versicolor', 'virginica'])
+                        .x(d3.scaleLinear()).xAxisPadding("0.001%")
+                        .y(d3.scaleLinear()).yAxisPadding("0.001%")
+                        .brushOn(true)
+                        .elasticX(true)
+                        .elasticY(true)
+                        .symbolSize(7)
+                        .nonemptyOpacity(0.7)
+                        .emptySize(7)
+                        .emptyColor('#ccc')
+                        .emptyOpacity(0.7)
+                        .excludedSize(7)
+                        .excludedColor('#ccc')
+                        .excludedOpacity(0.7)
+                        .renderHorizontalGridLines(true)
+                        .renderVerticalGridLines(true);
+                    chart.xAxis().ticks(6);
+                    chart.yAxis().ticks(6);
+                    chart.on('postRender', (chart) => {
+                  // remove axes unless at left or bottom
+                  if(!showXAxis)
+                      {chart.select('.x.axis').attr('display', 'none');}
+                  if(!showYAxis)
+                      {chart.select('.y.axis').attr('display', 'none');}
+                  // remove clip path, allow dots to display outside
+                  chart.select('.chart-body').attr('clip-path', null);
               });
-          dc.renderAll();
-      });
+                    // only filter on one chart at a time
+                    chart.on('filtered', (_, filter) => {
+                  if(!filter)
+                      {return;}
+                  charts.forEach((c) => {
+                if(c !== chart)
+                    {c.filter(null);}
+            });
+              });
+                    charts.push(chart);
+                });
+        });
+    dc.renderAll();
+});
 
       </script>
   </body>
