--- a/web-src/examples/area.html
+++ b/web-src/examples/area.html
@@ -17,49 +17,47 @@
     <script type="text/javascript" src="../js/dc.js"></script>
     <script type="text/javascript">
 
-      var chart = new dc.LineChart("#test");
-      d3.csv("morley.csv").then(function(experiments) {
+      const chart = new dc.LineChart("#test");
+      d3.csv("morley.csv").then((experiments) => {
 
-          experiments.forEach(function(x) {
-              x.Speed = +x.Speed;
-          });
+    experiments.forEach((x) => {
+  x.Speed = +x.Speed;
+    });
 
-          var ndx                 = crossfilter(experiments),
-              runDimension        = ndx.dimension(function(d) {return +d.Run;}),
-              speedSumGroup       = runDimension.group().reduce(function(p, v) {
-                  p[v.Expt] = (p[v.Expt] || 0) + v.Speed;
-                  return p;
-              }, function(p, v) {
-                  p[v.Expt] = (p[v.Expt] || 0) - v.Speed;
-                  return p;
-              }, function() {
-                  return {};
-              });
+    const ndx                 = crossfilter(experiments),
+        runDimension        = ndx.dimension((d) => +d.Run),
+        speedSumGroup       = runDimension.group().reduce((p, v) => {
+      p[v.Expt] = (p[v.Expt] || 0) + v.Speed;
+      return p;
+  }, (p, v) => {
+      p[v.Expt] = (p[v.Expt] || 0) - v.Speed;
+      return p;
+  }, () => ({}));
 
-          function sel_stack(i) {
-              return function(d) {
-                  return d.value[i];
-              };
-          }
+    function sel_stack(i) {
+        return function(d) {
+            return d.value[i];
+        };
+    }
 
-          chart
-              .width(768)
-              .height(480)
-              .x(d3.scaleLinear().domain([1,20]))
-              .margins({left: 50, top: 10, right: 10, bottom: 20})
-              .renderArea(true)
-              .brushOn(false)
-              .renderDataPoints(true)
-              .clipPadding(10)
-              .yAxisLabel("This is the Y Axis!")
-              .dimension(runDimension)
-              .group(speedSumGroup, "1", sel_stack('1'));
+    chart
+        .width(768)
+        .height(480)
+        .x(d3.scaleLinear().domain([1,20]))
+        .margins({left: 50, top: 10, right: 10, bottom: 20})
+        .renderArea(true)
+        .brushOn(false)
+        .renderDataPoints(true)
+        .clipPadding(10)
+        .yAxisLabel("This is the Y Axis!")
+        .dimension(runDimension)
+        .group(speedSumGroup, "1", sel_stack('1'));
 
-          for(var i = 2; i<6; ++i)
-              chart.stack(speedSumGroup, ''+i, sel_stack(i));
-          chart.render();
+    for(let i = 2; i<6; ++i)
+        {chart.stack(speedSumGroup, `${i}`, sel_stack(i));}
+    chart.render();
 
-      });
+});
 
     </script>
 
