--- a/web-src/examples/brush-ordinal.html
+++ b/web-src/examples/brush-ordinal.html
@@ -59,55 +59,51 @@ fake group, and then another fake group provides the integer/ordinal mapping.</p
     }
 
     // phrases generated with https://www.fourmilab.ch/javascrypt/pass_phrase.html
-    var bar;
-    d3.json("wide-ordinal.json").then(function(wide) {
-        var short = wide.slice(0, 50);
+    let bar;
+    d3.json("wide-ordinal.json").then((wide) => {
+    const short = wide.slice(0, 50);
 
-        const keys = short.map(d => d.key).sort((a,b) => d3.ascending(a,b));
-        const mappings =  new Mapper(keys);
+    const keys = short.map(d => d.key).sort((a,b) => d3.ascending(a,b));
+    const mappings =  new Mapper(keys);
 
-        // dummy crossfilter taking group data and regrouping it to the same thing
-        var cf = crossfilter(short),
-            dimension = cf.dimension(function(d) {return mappings.ord2int(d.key);}),
-            group = dimension.group().reduceSum(function(d) {return d.value;});
+    // dummy crossfilter taking group data and regrouping it to the same thing
+    const cf = crossfilter(short),
+        dimension = cf.dimension((d) => mappings.ord2int(d.key)),
+        group = dimension.group().reduceSum((d) => d.value);
 
-        bar = new dc.BarChart('#bar');
-        var linear_domain = [-0.5, mappings.length() - 0.5];
-        bar
-            .width(1000).height(300)
-            .margins({left: 75, top: 0, right: 10, bottom: 140})
-            .x(d3.scaleLinear().domain(linear_domain))
-            .xUnits(dc.units.integers)
-            .centerBar(true)
-            .yAxisLabel('counts')
-            .elasticY(true)
-            .brushOn(true)
-            .dimension(dimension)
-            .group(group)
-            .title(kv => mappings.int2ord(kv.key)); // Titles would not show with brush on
+    bar = new dc.BarChart('#bar');
+    const linear_domain = [-0.5, mappings.length() - 0.5];
+    bar
+        .width(1000).height(300)
+        .margins({left: 75, top: 0, right: 10, bottom: 140})
+        .x(d3.scaleLinear().domain(linear_domain))
+        .xUnits(dc.units.integers)
+        .centerBar(true)
+        .yAxisLabel('counts')
+        .elasticY(true)
+        .brushOn(true)
+        .dimension(dimension)
+        .group(group)
+        .title(kv => mappings.int2ord(kv.key)); // Titles would not show with brush on
 
-        bar.xAxis()
-            .tickValues(d3.range(mappings.length()))
-            .tickFormat(function(d) {
-                return mappings.int2ord(d);
-            });
+    bar.xAxis()
+        .tickValues(d3.range(mappings.length()))
+        .tickFormat((d) => mappings.int2ord(d));
 
-        // display a row chart of first letters, to test filtering
-        var letterDimension = cf.dimension(function(d) {
-            return d.key.split(' ').map(function(s) { return s[0]; });
-        }, true);
-        var letterGroup = letterDimension.group();
+    // display a row chart of first letters, to test filtering
+    const letterDimension = cf.dimension((d) => d.key.split(' ').map((s) => s[0]), true);
+    const letterGroup = letterDimension.group();
 
-        var row = new dc.RowChart('#first-letters');
-        row
-            .width(1000)
-            .height(350)
-            .gap(1)
-            .dimension(letterDimension)
-            .group(letterGroup);
+    const row = new dc.RowChart('#first-letters');
+    row
+        .width(1000)
+        .height(350)
+        .gap(1)
+        .dimension(letterDimension)
+        .group(letterGroup);
 
-        dc.renderAll();
-    });
+    dc.renderAll();
+});
 
 </script>
 
