--- a/web-src/examples/cbox-menu.html
+++ b/web-src/examples/cbox-menu.html
@@ -70,18 +70,18 @@
 
 <script type="text/javascript">
 
-    var cbox1 = new dc.CboxMenu('#cbox1'),
+    const cbox1 = new dc.CboxMenu('#cbox1'),
         cbox2 = new dc.CboxMenu('#cbox2'),
         cbox3 = new dc.CboxMenu('#cbox3'),
         datatable = new dc.DataTable('#datatable');
 
     // create a bunch of crosslinked categorical data
 
-    var letters = [];
+    const letters = [];
     for (var i = 0; i < 26; ++i)
-        letters.push(String.fromCharCode(i + 65));
+        {letters.push(String.fromCharCode(i + 65));}
 
-    var colors = ['AliceBlue', 'AntiqueWhite', 'Aqua', 'Aquamarine', 'Azure', 'Beige', 'Bisque', 'Black',
+    const colors = ['AliceBlue', 'AntiqueWhite', 'Aqua', 'Aquamarine', 'Azure', 'Beige', 'Bisque', 'Black',
         'BlanchedAlmond', 'Blue', 'BlueViolet', 'Brown', 'BurlyWood', 'CadetBlue', 'Chartreuse', 'Chocolate',
         'Coral', 'CornflowerBlue', 'Cornsilk', 'Crimson', 'Cyan', 'DarkBlue', 'DarkCyan', 'DarkGoldenRod',
         'DarkGray', 'DarkGrey', 'DarkGreen', 'DarkKhaki', 'DarkMagenta', 'DarkOliveGreen', 'Darkorange',
@@ -101,33 +101,25 @@
         'SlateGrey', 'Snow', 'SpringGreen', 'SteelBlue', 'Tan', 'Teal', 'Thistle', 'Tomato', 'Turquoise', 'Violet',
         'Wheat', 'White', 'WhiteSmoke', 'Yellow', 'YellowGreen'];
 
-    var states = ['AK', 'AL', 'AR', 'AZ', 'CA', 'CO', 'CT', 'DC', 'DE', 'FL', 'GA', 'GU', 'HI', 'IA', 'ID', 'IL', 'IN',
+    const states = ['AK', 'AL', 'AR', 'AZ', 'CA', 'CO', 'CT', 'DC', 'DE', 'FL', 'GA', 'GU', 'HI', 'IA', 'ID', 'IL', 'IN',
         'KS', 'KY', 'LA', 'MA', 'MD', 'ME', 'MH', 'MI', 'MN', 'MO', 'MS', 'MT', 'NC', 'ND', 'NE', 'NH', 'NJ', 'NM',
         'NV', 'NY', 'OH', 'OK', 'OR', 'PA', 'PR', 'PW', 'RI', 'SC', 'SD', 'TN', 'TX', 'UT', 'VA', 'VI', 'VT', 'WA',
         'WI', 'WV', 'WY'];
 
-    var data = [], SIZE = 500;
+    const data = [], SIZE = 500;
 
     function rnd (a) {
         return a[Math.floor(Math.random() * a.length)];
     }
 
     for (i = 0; i < SIZE; ++i)
-        data.push({letter: rnd(letters), color: rnd(colors), state: rnd(states)});
+        {data.push({letter: rnd(letters), color: rnd(colors), state: rnd(states)});}
 
-    var ndx = crossfilter(data),
-        letterDimension = ndx.dimension(function (d) {
-            return d.letter;
-        }),
-        colorDimension = ndx.dimension(function (d) {
-            return d.color;
-        }),
-        stateDimension = ndx.dimension(function (d) {
-            return d.state;
-        }),
-        letterDimension2 = ndx.dimension(function (d) {
-            return d.letter;
-        });
+    const ndx = crossfilter(data),
+        letterDimension = ndx.dimension((d) => d.letter),
+        colorDimension = ndx.dimension((d) => d.color),
+        stateDimension = ndx.dimension((d) => d.state),
+        letterDimension2 = ndx.dimension((d) => d.letter);
 
 
     cbox1
@@ -148,9 +140,7 @@
 
     datatable
         .dimension(letterDimension2)
-        .section(function (d) {
-            return d.letter;
-        })
+        .section((d) => d.letter)
         .columns(['color', 'state'])
         .size(data.length);
 
