--- a/web-src/examples/filter-stacks.html
+++ b/web-src/examples/filter-stacks.html
@@ -35,107 +35,99 @@
     <script type="text/javascript" src="../js/dc.js"></script>
     <script type="text/javascript">
 
-      var chart = new dc.BarChart("#test"),
+      const chart = new dc.BarChart("#test"),
           pie = new dc.PieChart('#pie');
-      d3.csv("morley.csv").then(function(experiments) {
+      d3.csv("morley.csv").then((experiments) => {
 
-          experiments.forEach(function(x) {
-              x.Speed = +x.Speed;
+    experiments.forEach((x) => {
+  x.Speed = +x.Speed;
+    });
+
+    // the way to combine multiple keys into one is domain-specific (and controversial)
+    // array keys are risky but also valid sometimes, that would be
+    // function multikey(x,y) {
+    //     return [x,y];
+    // }
+    // function splitkey(k) {
+    //     return k;
+    // }
+    function multikey(x,y) {
+        return `${x  }x${  y}`;
+    }
+    function splitkey(k) {
+        return k.split('x');
+    }
+    function stack_second(group) {
+        return {
+            all: function() {
+                const all = group.all(),
+                    m = {};
+                // build matrix from multikey/value pairs
+                all.forEach((kv) => {
+              const ks = splitkey(kv.key);
+              m[ks[0]] = m[ks[0]] || {};
+              m[ks[0]][ks[1]] = kv.value;
           });
+                // then produce multivalue key/value pairs
+                return Object.keys(m).map((k) => ({key: k, value: m[k]}));
+            }
+        };
+    }
 
-          // the way to combine multiple keys into one is domain-specific (and controversial)
-          // array keys are risky but also valid sometimes, that would be
-          // function multikey(x,y) {
-          //     return [x,y];
-          // }
-          // function splitkey(k) {
-          //     return k;
-          // }
-          function multikey(x,y) {
-              return x + 'x' + y;
-          }
-          function splitkey(k) {
-              return k.split('x');
-          }
-          function stack_second(group) {
-              return {
-                  all: function() {
-                      var all = group.all(),
-                          m = {};
-                      // build matrix from multikey/value pairs
-                      all.forEach(function(kv) {
-                          var ks = splitkey(kv.key);
-                          m[ks[0]] = m[ks[0]] || {};
-                          m[ks[0]][ks[1]] = kv.value;
-                      });
-                      // then produce multivalue key/value pairs
-                      return Object.keys(m).map(function(k) {
-                          return {key: k, value: m[k]};
-                      });
-                  }
-              };
-          }
+    const ndx = crossfilter(experiments),
+        runExptDim = ndx.dimension((d) => multikey(d.Run, d.Expt)),
+        runExptGroup = runExptDim.group().reduceSum((d) => d.Speed),
+        stackedGroup = stack_second(runExptGroup);
+    const quantizeSpeed = d3.scaleQuantize().domain(d3.extent(experiments, (d) => d.Speed)).range(['lowest', 'low', 'medium', 'high', 'highest']);
+    const quantizeSpeedDim = ndx.dimension((d) => quantizeSpeed(d.Speed)), quantizeSpeedGroup = quantizeSpeedDim.group();
 
-          var ndx = crossfilter(experiments),
-              runExptDim = ndx.dimension(function(d) { return multikey(d.Run, d.Expt); }),
-              runExptGroup = runExptDim.group().reduceSum(function(d) {
-                  return d.Speed;
-              }),
-              stackedGroup = stack_second(runExptGroup);
-          var quantizeSpeed = d3.scaleQuantize().domain(d3.extent(experiments, function(d) {
-              return d.Speed;
-          })).range(['lowest', 'low', 'medium', 'high', 'highest']);
-          var quantizeSpeedDim = ndx.dimension(function(d) {
-              return quantizeSpeed(d.Speed);
-          }), quantizeSpeedGroup = quantizeSpeedDim.group();
+    function sel_stack(i) {
+        return function(d) {
+            return d.value[i];
+        };
+    }
 
-          function sel_stack(i) {
-              return function(d) {
-                  return d.value[i];
-              };
-          }
+    chart
+        .width(600)
+        .height(400)
+        .controlsUseVisibility(true)
+        .x(d3.scaleLinear().domain([1,21]))
+        .margins({left: 80, top: 20, right: 10, bottom: 20})
+        .brushOn(false)
+        .clipPadding(10)
+        .title(function(d) {
+            return `${d.key  }[${  this.name  }]: ${  d.value[this.name]}`;
+        })
+        .dimension(runExptDim)
+        .group(stackedGroup, "1", sel_stack('1'))
+        .renderLabel(true);
 
-          chart
-              .width(600)
-              .height(400)
-              .controlsUseVisibility(true)
-              .x(d3.scaleLinear().domain([1,21]))
-              .margins({left: 80, top: 20, right: 10, bottom: 20})
-              .brushOn(false)
-              .clipPadding(10)
-              .title(function(d) {
-                  return d.key + '[' + this.name + ']: ' + d.value[this.name];
-              })
-              .dimension(runExptDim)
-              .group(stackedGroup, "1", sel_stack('1'))
-              .renderLabel(true);
+    for(let i = 2; i<6; ++i)
+        {chart.stack(stackedGroup, `${i}`, sel_stack(i));}
 
-          for(var i = 2; i<6; ++i)
-              chart.stack(stackedGroup, ''+i, sel_stack(i));
+    chart.on('pretransition', (chart) => {
+  chart.selectAll('rect.bar')
+      .classed('stack-deselected', (d) => {
+    // display stack faded if the chart has filters AND
+    // the current stack is not one of them
+    const key = multikey(d.x, d.name);
+    return chart.filter() && chart.filters().indexOf(key)===-1;
+})
+      .on('click', (evt, d) => {
+    chart.filter(multikey(d.x, d.name));
+    dc.redrawAll();
+});
+    });
 
-          chart.on('pretransition', function(chart) {
-              chart.selectAll('rect.bar')
-                  .classed('stack-deselected', function(d) {
-                      // display stack faded if the chart has filters AND
-                      // the current stack is not one of them
-                      var key = multikey(d.x, d.name);
-                      return chart.filter() && chart.filters().indexOf(key)===-1;
-                  })
-                  .on('click', function(evt, d) {
-                      chart.filter(multikey(d.x, d.name));
-                      dc.redrawAll();
-                  });
-          });
+    pie
+        .width(300)
+        .height(300)
+        .controlsUseVisibility(true)
+        .dimension(quantizeSpeedDim)
+        .group(quantizeSpeedGroup);
 
-          pie
-              .width(300)
-              .height(300)
-              .controlsUseVisibility(true)
-              .dimension(quantizeSpeedDim)
-              .group(quantizeSpeedGroup);
-
-          dc.renderAll();
-      });
+    dc.renderAll();
+});
 
     </script>
 
