--- a/web-src/examples/filtering-removing.html
+++ b/web-src/examples/filtering-removing.html
@@ -26,12 +26,12 @@
 <script type="text/javascript" src="../js/dc.js"></script>
 <script type="text/javascript">
 
-var yearRingChart   = new dc.PieChart("#chart-ring-year"),
+const yearRingChart   = new dc.PieChart("#chart-ring-year"),
     spendHistChart  = new dc.BarChart("#chart-hist-spend"),
     spenderRowChart = new dc.RowChart("#chart-row-spenders");
 
 // use static or load via d3.csv("spendData.csv").then(function(spendData) {/* do stuff */});
-var spendData = [
+const spendData = [
     {Name: 'Mr A', Spent: '$40', Year: 2011},
     {Name: 'Mr B', Spent: '$10', Year: 2011},
     {Name: 'Mr C', Spent: '$40', Year: 2011},
@@ -42,27 +42,25 @@ var spendData = [
 ];
 
 // normalize/parse data
-spendData.forEach(function(d) {
+spendData.forEach((d) => {
     d.Spent = d.Spent.match(/\d+/);
 });
 
 function remove_empty_bins(source_group) {
     return {
         all:function () {
-            return source_group.all().filter(function(d) {
-                return d.value != 0;
-            });
+            return source_group.all().filter((d) => d.value != 0);
         }
     };
 }
 
 // set crossfilter
-var ndx = crossfilter(spendData),
-    yearDim  = ndx.dimension(function(d) {return +d.Year;}),
-    spendDim = ndx.dimension(function(d) {return Math.floor(d.Spent/10);}),
-    nameDim  = ndx.dimension(function(d) {return d.Name;}),
-    spendPerYear = yearDim.group().reduceSum(function(d) {return +d.Spent;}),
-    spendPerName = nameDim.group().reduceSum(function(d) {return +d.Spent;}),
+const ndx = crossfilter(spendData),
+    yearDim  = ndx.dimension((d) => +d.Year),
+    spendDim = ndx.dimension((d) => Math.floor(d.Spent/10)),
+    nameDim  = ndx.dimension((d) => d.Name),
+    spendPerYear = yearDim.group().reduceSum((d) => +d.Spent),
+    spendPerName = nameDim.group().reduceSum((d) => +d.Spent),
     spendHist    = spendDim.group().reduceCount(),
     nonEmptyHist = remove_empty_bins(spendHist)
 
@@ -81,7 +79,7 @@ spendHistChart
     .elasticX(true)
     .elasticY(true);
 
-spendHistChart.xAxis().tickFormat(function(d) {return d*10}); // convert back to base unit
+spendHistChart.xAxis().tickFormat((d) => d*10); // convert back to base unit
 spendHistChart.yAxis().ticks(2);
 
 spenderRowChart
