--- a/web-src/examples/focus-dynamic-data.html
+++ b/web-src/examples/focus-dynamic-data.html
@@ -27,66 +27,66 @@
         const urlParams = new URLSearchParams(window.location.search),
           remove = urlParams.get('remove');
 
-        var focus = new dc.LineChart("#focus");
-        var zoom = new dc.LineChart("#range");
-        d3.csv("morley.csv").then(function(experiments) {
-            experiments.forEach(function(x) {
-                x.Speed = +x.Speed;
-            });
+        const focus = new dc.LineChart("#focus");
+        const zoom = new dc.LineChart("#range");
+        d3.csv("morley.csv").then((experiments) => {
+    experiments.forEach((x) => {
+x.Speed = +x.Speed;
+    });
 
-            var ndx                 = crossfilter(experiments),
-                runDimension        = ndx.dimension(function(d) {return +d.Run;}),
-                speedSumGroup       = runDimension.group().reduceSum(function(d) {return d.Speed * d.Run / 1000;});
+    const ndx                 = crossfilter(experiments),
+        runDimension        = ndx.dimension((d) => +d.Run),
+        speedSumGroup       = runDimension.group().reduceSum((d) => d.Speed * d.Run / 1000);
 
-            focus
-                .width(768)
-                .height(400)
-                .x(d3.scaleLinear().domain([6,20]))
-                .evadeDomainFilter(true)
-                .elasticY(true)
-                .brushOn(false)
-                .yAxisLabel("This is the Y Axis!")
-                .dimension(runDimension)
-                .group(speedSumGroup)
-                .rangeChart(zoom);
+    focus
+        .width(768)
+        .height(400)
+        .x(d3.scaleLinear().domain([6,20]))
+        .evadeDomainFilter(true)
+        .elasticY(true)
+        .brushOn(false)
+        .yAxisLabel("This is the Y Axis!")
+        .dimension(runDimension)
+        .group(speedSumGroup)
+        .rangeChart(zoom);
 
-            function expand_focus() {
-                // if the chart were not storing the original domain, this is all we'd
-                // need to do have the focus chart elasticX when not zoomed:
-                //focus.elasticX(!zoom.filters().length);
+    function expand_focus() {
+        // if the chart were not storing the original domain, this is all we'd
+        // need to do have the focus chart elasticX when not zoomed:
+        //focus.elasticX(!zoom.filters().length);
 
-                // instead, we'll need to set the x scale each time, and calculate domain
-                if(!zoom.filters().length) {
-                    var xExtent = d3.extent(speedSumGroup.all(), kv => kv.key);
-                    focus.x(focus.x().domain(xExtent));
-                }
-            }
-            focus.on('preRender', expand_focus);
-            focus.on('preRedraw', expand_focus);
+        // instead, we'll need to set the x scale each time, and calculate domain
+        if(!zoom.filters().length) {
+            const xExtent = d3.extent(speedSumGroup.all(), kv => kv.key);
+            focus.x(focus.x().domain(xExtent));
+        }
+    }
+    focus.on('preRender', expand_focus);
+    focus.on('preRedraw', expand_focus);
 
-            zoom
-                .width(768)
-                .height(80)
-                .x(d3.scaleLinear().domain([6,20]))
-                .elasticX(true)
-                .elasticY(true)
-                .brushOn(true)
-                .yAxisLabel("")
-                .dimension(runDimension)
-                .group(speedSumGroup);
+    zoom
+        .width(768)
+        .height(80)
+        .x(d3.scaleLinear().domain([6,20]))
+        .elasticX(true)
+        .elasticY(true)
+        .brushOn(true)
+        .yAxisLabel("")
+        .dimension(runDimension)
+        .group(speedSumGroup);
 
-            dc.renderAll();
+    dc.renderAll();
 
-            var run = 21;
-            setInterval(
-                () => {
-                    ndx.add([{Expt: 6, Run: run++, Speed: 5000 + 5 * run}]);
-                    if(remove)
-                        ndx.remove(d => d.Run < run-20);
-                    dc.redrawAll()
-                },
-                5000);
-        });
+    let run = 21;
+    setInterval(
+        () => {
+            ndx.add([{Expt: 6, Run: run++, Speed: 5000 + 5 * run}]);
+            if(remove)
+                {ndx.remove(d => d.Run < run-20);}
+            dc.redrawAll()
+        },
+        5000);
+});
 
       </script>
 
