--- a/web-src/examples/multi-focus.html
+++ b/web-src/examples/multi-focus.html
@@ -21,20 +21,20 @@
 <script type="text/javascript" src="../js/dc.js"></script>
 <script type="text/javascript">
 
-var chart1 = new dc.BarChart("#test1");
-var chart2 = new dc.BarChart("#test2");
-var chart3 = new dc.BarChart("#test3");
-var chart4 = new dc.BarChart("#test4");
+const chart1 = new dc.BarChart("#test1");
+const chart2 = new dc.BarChart("#test2");
+const chart3 = new dc.BarChart("#test3");
+const chart4 = new dc.BarChart("#test4");
 
-d3.csv("morley.csv").then(function(experiments) {
+d3.csv("morley.csv").then((experiments) => {
 
-    experiments.forEach(function(x) {
+    experiments.forEach((x) => {
         x.Speed = +x.Speed;
     });
 
-    var ndx                 = crossfilter(experiments),
-        runDimension        = ndx.dimension(function(d) {return +d.Run;}),
-        speedSumGroup       = runDimension.group().reduceSum(function(d) {return d.Speed * d.Run / 1000;});
+    const ndx                 = crossfilter(experiments),
+        runDimension        = ndx.dimension((d) => +d.Run),
+        speedSumGroup       = runDimension.group().reduceSum((d) => d.Speed * d.Run / 1000);
 
 
     function bar_chart(chart) {
