--- a/web-src/examples/range-series.html
+++ b/web-src/examples/range-series.html
@@ -23,23 +23,23 @@
 
 dc.constants.EVENT_DELAY = 0;
 
-var focusChart = new dc.SeriesChart("#test");
-var overviewChart = new dc.SeriesChart("#test-overview");
-var ndx, runDimension, runGroup, overviewRunDimension, overviewRunGroup;
+const focusChart = new dc.SeriesChart("#test");
+const overviewChart = new dc.SeriesChart("#test-overview");
+let ndx, runDimension, runGroup, overviewRunDimension, overviewRunGroup;
 
-d3.csv("morley.csv").then(function(experiments) {
+d3.csv("morley.csv").then((experiments) => {
 
   ndx = crossfilter(experiments);
-  runDimension = ndx.dimension(function(d) {return [+d.Expt, +d.Run]; });
-  overviewRunDimension = ndx.dimension(function(d) {return [+d.Expt, +d.Run]; });
-  runGroup = runDimension.group().reduceSum(function(d) { return +d.Speed; });
-  overviewRunGroup = overviewRunDimension.group().reduceSum(function(d) { return +d.Speed; });
+  runDimension = ndx.dimension((d) => [+d.Expt, +d.Run]);
+  overviewRunDimension = ndx.dimension((d) => [+d.Expt, +d.Run]);
+  runGroup = runDimension.group().reduceSum((d) => +d.Speed);
+  overviewRunGroup = overviewRunDimension.group().reduceSum((d) => +d.Speed);
 
   focusChart
     .width(768)
     .height(480)
     .transitionDuration(0)
-    .chart(function(c) { return new dc.LineChart(c).curve(d3.curveCardinal).evadeDomainFilter(true); })
+    .chart((c) => new dc.LineChart(c).curve(d3.curveCardinal).evadeDomainFilter(true))
     .x(d3.scaleLinear().domain([0,20]))
     .brushOn(false)
     .yAxisLabel("Measured Speed km/s")
@@ -50,27 +50,27 @@ d3.csv("morley.csv").then(function(experiments) {
     .group(runGroup)
     .mouseZoomable(true)
     .rangeChart(overviewChart)
-    .seriesAccessor(function(d) {return "Expt: " + d.key[0];})
-    .keyAccessor(function(d) {return +d.key[1];})
-    .valueAccessor(function(d) {return +d.value - 500;})
+    .seriesAccessor((d) => `Expt: ${  d.key[0]}`)
+    .keyAccessor((d) => +d.key[1])
+    .valueAccessor((d) => +d.value - 500)
     .legend(dc.legend().x(350).y(350).itemHeight(13).gap(5).horizontal(1).legendWidth(140).itemWidth(70));
-  focusChart.yAxis().tickFormat(function(d) {return d3.format(',d')(d+299500);});
+  focusChart.yAxis().tickFormat((d) => d3.format(',d')(d+299500));
   focusChart.margins().left += 40;
 
   overviewChart
     .width(768)
     .height(100)
     .transitionDuration(0)
-    .chart(function(c) { return new dc.LineChart(c).curve(d3.curveCardinal); })
+    .chart((c) => new dc.LineChart(c).curve(d3.curveCardinal))
     .x(d3.scaleLinear().domain([0,20]))
     .brushOn(true)
     .xAxisLabel("Run")
     .clipPadding(10)
     .dimension(runDimension)
     .group(runGroup)
-    .seriesAccessor(function(d) {return "Expt: " + d.key[0];})
-    .keyAccessor(function(d) {return +d.key[1];})
-    .valueAccessor(function(d) {return +d.value - 500;});
+    .seriesAccessor((d) => `Expt: ${  d.key[0]}`)
+    .keyAccessor((d) => +d.key[1])
+    .valueAccessor((d) => +d.value - 500);
 
   dc.renderAll();
 
