--- a/web-src/examples/replacing-data.html
+++ b/web-src/examples/replacing-data.html
@@ -25,10 +25,10 @@
 
 <script type="text/javascript">
 
-var yearRingChart   = new dc.PieChart("#chart-ring-year"),
+const yearRingChart   = new dc.PieChart("#chart-ring-year"),
     spenderRowChart = new dc.RowChart("#chart-row-spenders");
 
-var data1 = [
+const data1 = [
     {Name: 'Mr A', Spent: 40, Year: 2011},
     {Name: 'Mr B', Spent: 10, Year: 2011},
     {Name: 'Mr C', Spent: 40, Year: 2011},
@@ -38,7 +38,7 @@ var data1 = [
     {Name: 'Mr C', Spent: 30, Year: 2013}
 ];
 
-var data2 = [
+const data2 = [
     {Name: 'Mr A', Spent: 10, Year: 2011},
     {Name: 'Mr B', Spent: 20, Year: 2011},
     {Name: 'Mr C', Spent: 50, Year: 2011},
@@ -71,12 +71,12 @@ function resetData(ndx) {
 }
 
 // set crossfilter with first dataset
-var ndx = crossfilter(data1),
-    yearDim  = ndx.dimension(function(d) {return +d.Year;}),
-    spendDim = ndx.dimension(function(d) {return Math.floor(d.Spent/10);}),
-    nameDim  = ndx.dimension(function(d) {return d.Name;}),
-    spendPerYear = yearDim.group().reduceSum(function(d) {return +d.Spent;}),
-    spendPerName = nameDim.group().reduceSum(function(d) {return +d.Spent;}),
+const ndx = crossfilter(data1),
+    yearDim  = ndx.dimension((d) => +d.Year),
+    spendDim = ndx.dimension((d) => Math.floor(d.Spent/10)),
+    nameDim  = ndx.dimension((d) => d.Name),
+    spendPerYear = yearDim.group().reduceSum((d) => +d.Spent),
+    spendPerName = nameDim.group().reduceSum((d) => +d.Spent),
     spendHist    = spendDim.group().reduceCount();
 
 function render_plots(){
@@ -98,7 +98,7 @@ function render_plots(){
 render_plots();
 
 // REFRESH DATA AFTER 5 SECONDS
-setTimeout(function() {
+setTimeout(() => {
     console.log("data reset");
     resetData(ndx, [yearDim, spendDim, nameDim]);
     ndx.add(data2);
