--- a/web-src/examples/row-top-axis.html
+++ b/web-src/examples/row-top-axis.html
@@ -17,16 +17,16 @@
 <script type="text/javascript" src="../js/dc.js"></script>
 <script type="text/javascript">
 
-var chart = new dc.RowChart("#test");
-d3.csv("morley.csv").then(function(experiments) {
+const chart = new dc.RowChart("#test");
+d3.csv("morley.csv").then((experiments) => {
 
-  experiments.forEach(function(x) {
+  experiments.forEach((x) => {
     x.Speed = +x.Speed;
   });
 
-  var ndx                 = crossfilter(experiments),
-      runDimension        = ndx.dimension(function(d) {return +d.Run;}),
-      speedSumGroup       = runDimension.group().reduceSum(function(d) {return d.Speed * d.Run / 1000;});
+  const ndx                 = crossfilter(experiments),
+      runDimension        = ndx.dimension((d) => +d.Run),
+      speedSumGroup       = runDimension.group().reduceSum((d) => d.Speed * d.Run / 1000);
 
   chart
     .width(768)
@@ -38,7 +38,7 @@ d3.csv("morley.csv").then(function(experiments) {
     .dimension(runDimension)
     .group(speedSumGroup);
 
-  chart.on('pretransition', function() {
+  chart.on('pretransition', () => {
     chart.select('g.axis').attr('transform', 'translate(0,0)');
     chart.selectAll('line.grid-line').attr('y2', chart.effectiveHeight());
   });
