--- a/web-src/examples/scatter-series.html
+++ b/web-src/examples/scatter-series.html
@@ -17,18 +17,18 @@
 <script type="text/javascript" src="../js/dc.js"></script>
 <script type="text/javascript">
 
-var chart = new dc.SeriesChart("#test");
-var ndx, runDimension, runGroup;
+const chart = new dc.SeriesChart("#test");
+let ndx, runDimension, runGroup;
 
-d3.csv("morley.csv").then(function(experiments) {
+d3.csv("morley.csv").then((experiments) => {
 
   ndx = crossfilter(experiments);
-  runDimension = ndx.dimension(function(d) {return [+d.Expt, +d.Run]; });
-  runGroup = runDimension.group().reduceSum(function(d) { return +d.Speed; });
+  runDimension = ndx.dimension((d) => [+d.Expt, +d.Run]);
+  runGroup = runDimension.group().reduceSum((d) => +d.Speed);
 
-  var symbolScale = d3.scaleOrdinal().range(d3.symbols);
-  var symbolAccessor = function(d) { return symbolScale(d.key[0]); };
-  var subChart = function(c) {
+  const symbolScale = d3.scaleOrdinal().range(d3.symbols);
+  const symbolAccessor = function(d) { return symbolScale(d.key[0]); };
+  const subChart = function(c) {
     return new dc.ScatterPlot(c)
         .symbol(symbolAccessor)
         .symbolSize(8)
@@ -49,11 +49,11 @@ d3.csv("morley.csv").then(function(experiments) {
     .group(runGroup)
     .mouseZoomable(false)
     .shareTitle(false) // allow default scatter title to work
-    .seriesAccessor(function(d) {return "Expt: " + d.key[0];})
-    .keyAccessor(function(d) {return +d.key[1];})
-    .valueAccessor(function(d) {return +d.value - 500;})
+    .seriesAccessor((d) => `Expt: ${  d.key[0]}`)
+    .keyAccessor((d) => +d.key[1])
+    .valueAccessor((d) => +d.value - 500)
     .legend(dc.legend().x(350).y(350).itemHeight(13).gap(5).horizontal(1).legendWidth(140).itemWidth(70));
-  chart.yAxis().tickFormat(function(d) {return d3.format(',d')(d+299500);});
+  chart.yAxis().tickFormat((d) => d3.format(',d')(d+299500));
   chart.margins().left += 40;
 
   dc.renderAll();
