--- a/web-src/examples/series.html
+++ b/web-src/examples/series.html
@@ -20,19 +20,19 @@
 <script type="text/javascript" src="../js/dc.js"></script>
 <script type="text/javascript">
 
-var chart = new dc.SeriesChart("#test");
-var ndx, runDimension, runGroup;
+const chart = new dc.SeriesChart("#test");
+let ndx, runDimension, runGroup;
 
-d3.csv("morley.csv").then(function(experiments) {
+d3.csv("morley.csv").then((experiments) => {
 
   ndx = crossfilter(experiments);
-  runDimension = ndx.dimension(function(d) {return [+d.Expt, +d.Run]; });
-  runGroup = runDimension.group().reduceSum(function(d) { return +d.Speed; });
+  runDimension = ndx.dimension((d) => [+d.Expt, +d.Run]);
+  runGroup = runDimension.group().reduceSum((d) => +d.Speed);
 
   chart
     .width(768)
     .height(480)
-    .chart(function(c) { return new dc.LineChart(c).curve(d3.curveCardinal); })
+    .chart((c) => new dc.LineChart(c).curve(d3.curveCardinal))
     .x(d3.scaleLinear().domain([0,20]))
     .brushOn(false)
     .yAxisLabel("Measured Speed km/s")
@@ -42,11 +42,11 @@ d3.csv("morley.csv").then(function(experiments) {
     .dimension(runDimension)
     .group(runGroup)
     .mouseZoomable(true)
-    .seriesAccessor(function(d) {return "Expt: " + d.key[0];})
-    .keyAccessor(function(d) {return +d.key[1];})
-    .valueAccessor(function(d) {return +d.value - 500;})
+    .seriesAccessor((d) => `Expt: ${  d.key[0]}`)
+    .keyAccessor((d) => +d.key[1])
+    .valueAccessor((d) => +d.value - 500)
     .legend(dc.legend().x(350).y(350).itemHeight(13).gap(5).horizontal(1).legendWidth(140).itemWidth(70));
-  chart.yAxis().tickFormat(function(d) {return d3.format(',d')(d+299500);});
+  chart.yAxis().tickFormat((d) => d3.format(',d')(d+299500));
   chart.margins().left += 40;
 
   dc.renderAll();
@@ -55,7 +55,7 @@ d3.csv("morley.csv").then(function(experiments) {
 
 function load_button(file) {
     return function load_it() {
-        d3.csv(file).then(function(experiments) {
+        d3.csv(file).then((experiments) => {
             ndx.remove(() => true);
             ndx.add(experiments);
             dc.redrawAll();
@@ -63,7 +63,7 @@ function load_button(file) {
     };
 }
 
-var button1 = load_button("morley.csv"),
+const button1 = load_button("morley.csv"),
     button2 = load_button("morley2.csv"),
     button3 = load_button("morley3.csv");
 
