--- a/web-src/examples/sunburst.html
+++ b/web-src/examples/sunburst.html
@@ -30,34 +30,22 @@
 <script type="text/javascript" src="../js/dc.js"></script>
 <script type="text/javascript">
 
-var chart3 = new dc.RowChart("#test3");
-var chart2 = new dc.RowChart("#test2");
-var chart = new dc.SunburstChart("#test");
+const chart3 = new dc.RowChart("#test3");
+const chart2 = new dc.RowChart("#test2");
+const chart = new dc.SunburstChart("#test");
 
-d3.csv("morley.csv").then(function(experiments) {
+d3.csv("morley.csv").then((experiments) => {
 
-    var ndx = crossfilter(experiments),
-        runDimension = ndx.dimension(function (d) {
-            return [d.Expt, d.Run];
-        });
+    const ndx = crossfilter(experiments),
+        runDimension = ndx.dimension((d) => [d.Expt, d.Run]);
 
-    var speedSumGroup = runDimension.group().reduceSum(function (d) {
-        return d.Speed;
-    });
+    const speedSumGroup = runDimension.group().reduceSum((d) => d.Speed);
 
-    var runOnlyDimension = ndx.dimension(function (d) {
-        return d.Run;
-    });
-    var runOnlySpeedGroup = runOnlyDimension.group().reduceSum(function (d) {
-        return d.Speed;
-    });
+    const runOnlyDimension = ndx.dimension((d) => d.Run);
+    const runOnlySpeedGroup = runOnlyDimension.group().reduceSum((d) => d.Speed);
 
-    var exptOnlyDimension = ndx.dimension(function (d) {
-        return d.Expt;
-    });
-    var exptOnlySpeedGroup = exptOnlyDimension.group().reduceSum(function (d) {
-        return d.Speed;
-    });
+    const exptOnlyDimension = ndx.dimension((d) => d.Expt);
+    const exptOnlySpeedGroup = exptOnlyDimension.group().reduceSum((d) => d.Speed);
 
     chart3
         .width(200)
