--- a/web-src/examples/time-intervals.html
+++ b/web-src/examples/time-intervals.html
@@ -39,16 +39,16 @@ library by Mikola Lysenko.</p>
   function intervalTreeGroup(tree, firstDate, lastDate) {
       return {
           all: function() {
-              var begin = d3.timeMonth(firstDate), end = d3.timeMonth(lastDate);
-              var i = new Date(begin);
-              var ret = [], count;
+              const begin = d3.timeMonth(firstDate), end = d3.timeMonth(lastDate);
+              let i = new Date(begin);
+              let ret = [], count;
               do {
                   next = new Date(i);
                   next.setMonth(next.getMonth()+1);
                   count = 0;
-                  tree.queryInterval(i.getTime(), next.getTime(), function() {
-                      ++count;
-                  });
+                  tree.queryInterval(i.getTime(), next.getTime(), () => {
+                    ++count;
+                });
                   ret.push({key: i, value: count});
                   i = next;
               }
@@ -58,92 +58,88 @@ library by Mikola Lysenko.</p>
       };
   }
 
-  var dateFormatSpecifier = '%x';
-  var timeFormat = d3.timeFormat(dateFormatSpecifier);
-  var dateFormatParser = d3.timeParse(dateFormatSpecifier);
-  var monthChart = new dc.BarChart("#month");
-  var costChart = new dc.BarChart("#cost");
+  const dateFormatSpecifier = '%x';
+  const timeFormat = d3.timeFormat(dateFormatSpecifier);
+  const dateFormatParser = d3.timeParse(dateFormatSpecifier);
+  const monthChart = new dc.BarChart("#month");
+  const costChart = new dc.BarChart("#cost");
   // data from http://stackoverflow.com/questions/22603788/crossfilter-how-to-extract-time-information-from-start-date-and-end-date-column
-  d3.csv("intervals.csv").then(function(projects) {
+  d3.csv("intervals.csv").then((projects) => {
 
-      projects.forEach(function(x) {
-          x['Start Date'] = dateFormatParser(x['Start Date']);
-          x['End Date'] = dateFormatParser(x['End Date']);
-          // the library uses object identity so we have to cache the interval arrays
-          x.interval = [x['Start Date'].getTime(), x['End Date'].getTime()];
-          x.Cost = +x.Cost;
-      });
-      // the interval tree library doesn't seem to provide start/end info
-      var firstDate = d3.min(projects, function(x) { return x['Start Date']; }),
-          lastDate = d3.max(projects, function(x) { return x['End Date']; });
-
-      var ndx = crossfilter(projects),
-          intervalDimension = ndx.dimension(function(d) {return d.interval;}),
-          projectsPerMonthTree = ndx.groupAll().reduce(
-              function(v, d) {
-                  v.insert(d.interval);
-                  return v;
-              },
-              function(v, d) {
-                  v.remove(d.interval);
-                  return v;
-              },
-              function() {
-                  return lysenkoIntervalTree(null);
-              }
-          ),
-          projectsPerMonthGroup = intervalTreeGroup(projectsPerMonthTree.value(), firstDate, lastDate),
-          projectCostDimension = ndx.dimension(function(d) { return d.Cost; }),
-          projectCostGroup = projectCostDimension.group();
-
-      class MyDataAdapter extends dc.CFMultiAdapter {
-          applyFilters () {
-              const filters = this.filters;
-              const dim = this.conf().dimension;
-
-              if(filters.length > 0) {
-                  if(filters.length !== 1)
-                      throw new Error('not expecting more than one range filter');
-                  var range = filters[0];
-                  dim.filterFunction(function(i) {
-                      return !(i[1] < range[0].getTime() || i[0] > range[1].getTime());
-                  })
-              }
-              else dim.filterAll();
-          }
-      }
-
-      monthChart
-          .width(400)
-          .height(300)
-          .x(d3.scaleTime())
-          .y(d3.scaleLinear().domain([0,25]))
-          .xUnits(d3.timeMonths)
-          .gap(5)
-          .elasticX(true)
-          .brushOn(true)
-          .yAxisLabel("Number of Projects")
-          .xAxisLabel("Month")
-          .dataProvider(new MyDataAdapter({
-              dimension: intervalDimension,
-              group: projectsPerMonthGroup
-          }))
-          .controlsUseVisibility(true);
-
-      costChart
-          .width(400)
-          .height(300)
-          .x(d3.scaleLinear().domain([0,24]))
-          .y(d3.scaleLinear().domain([0,25]))
-          .brushOn(true)
-          .yAxisLabel("Number of Projects")
-          .xAxisLabel("Cost")
-          .dimension(projectCostDimension)
-          .group(projectCostGroup)
-          .controlsUseVisibility(true);
-
-      dc.renderAll();
+    projects.forEach((x) => {
+      x['Start Date'] = dateFormatParser(x['Start Date']);
+      x['End Date'] = dateFormatParser(x['End Date']);
+      // the library uses object identity so we have to cache the interval arrays
+      x.interval = [x['Start Date'].getTime(), x['End Date'].getTime()];
+      x.Cost = +x.Cost;
   });
+    // the interval tree library doesn't seem to provide start/end info
+    const firstDate = d3.min(projects, (x) => x['Start Date']),
+        lastDate = d3.max(projects, (x) => x['End Date']);
+
+    const ndx = crossfilter(projects),
+        intervalDimension = ndx.dimension((d) => d.interval),
+        projectsPerMonthTree = ndx.groupAll().reduce(
+            (v, d) => {
+              v.insert(d.interval);
+              return v;
+          },
+            (v, d) => {
+              v.remove(d.interval);
+              return v;
+          },
+            () => lysenkoIntervalTree(null)
+        ),
+        projectsPerMonthGroup = intervalTreeGroup(projectsPerMonthTree.value(), firstDate, lastDate),
+        projectCostDimension = ndx.dimension((d) => d.Cost),
+        projectCostGroup = projectCostDimension.group();
+
+    class MyDataAdapter extends dc.CFMultiAdapter {
+        applyFilters () {
+            const filters = this.filters;
+            const dim = this.conf().dimension;
+
+            if(filters.length > 0) {
+                if(filters.length !== 1)
+                    {throw new Error('not expecting more than one range filter');}
+                const range = filters[0];
+                dim.filterFunction((i) => !(i[1] < range[0].getTime() || i[0] > range[1].getTime()))
+            }
+            else {dim.filterAll();}
+        }
+    }
+
+    monthChart
+        .width(400)
+        .height(300)
+        .x(d3.scaleTime())
+        .y(d3.scaleLinear().domain([0,25]))
+        .xUnits(d3.timeMonths)
+        .gap(5)
+        .elasticX(true)
+        .brushOn(true)
+        .yAxisLabel("Number of Projects")
+        .xAxisLabel("Month")
+        .dataProvider(new MyDataAdapter({
+            dimension: intervalDimension,
+            group: projectsPerMonthGroup
+        }))
+        .controlsUseVisibility(true);
+
+    costChart
+        .width(400)
+        .height(300)
+        .x(d3.scaleLinear().domain([0,24]))
+        .y(d3.scaleLinear().domain([0,25]))
+        .brushOn(true)
+        .yAxisLabel("Number of Projects")
+        .xAxisLabel("Cost")
+        .dimension(projectCostDimension)
+        .group(projectCostGroup)
+        .controlsUseVisibility(true);
+
+    dc.renderAll();
+});
 
 </script>
 
